Bug 47326 - VIEWING: Bad rendering of RTF document
Summary: VIEWING: Bad rendering of RTF document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:3.6.0 target:3.5.3
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-03-14 16:52 UTC by anael
Modified: 2015-12-17 12:04 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Document which is badly rendered (38.76 KB, application/rtf)
2012-03-14 16:52 UTC, anael
Details

Note You need to log in before you can comment on or make changes to this bug.
Description anael 2012-03-14 16:52:42 UTC
Created attachment 58462 [details]
Document which is badly rendered

Problem description: 
I open a RTF file (made in 2004 - readme file for a game).
If I open the document with LOo, the opening occurs durging ~3 minutes and then the rendering is bad : text aren't on the good place, global displaying is bad (especially on the page 2)


Steps to reproduce:
1. Open the document
2. Compare to the same document opened with Wordpad

Current behavior:
Bad display (missing parts of the document, bad typo, ...)
See screenshoot at : http://www.image-heberg.fr/files/133174002369096.png


Expected behavior:
Global display as in wordpad

Platform (if different from the browser): 
Windows WP SP3

Browser: Mozilla/5.0 (Windows NT 5.1; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Comment 1 s-joyemusequna 2012-03-15 08:08:53 UTC
Confirmed with LO 3.5.1 RC2 (=final) on Windows XP.

Display is garbled (wrong font display, font size) after the paragraph "1.	Avertissements de mémoire virtuelle sous Windows® 2000/XP" on page 2 (see picture from anael).

Works fine with Word 2007, LibO 3.3.4, and LibO 3.4.5. This is a regression.
Comment 2 Korrawit Pruegsanusak 2012-03-17 02:53:34 UTC
Miklos, could you please have a look? Thanks :)
Comment 3 Miklos Vajna 2012-03-23 04:30:06 UTC
Hello,

First I stared at the text document to see how it differs, but it turns out there is indeed a lot of missing text, because for footnotes we buffer the text after the \super keyword and \nosupersub was not implemented. This should improve the situation a lot.
Comment 4 Not Assigned 2012-03-23 06:36:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f84e0e6b1b0ec5f52ee963a62ac420cd872a771e

fdo#47326 fix RTF import of mixed super/nonsuper text
Comment 5 Miklos Vajna 2012-03-23 06:57:57 UTC
I've just fixed the dataloss during import, I'll send it for review to -3-5 as well a bit later. If there are still remaining independent issues, please open a separate bug for those, so won't track multiple issues with a single number.

Thanks for the report!
Comment 6 Not Assigned 2012-04-02 13:16:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b2d8d2d3cacbfc6d505248b81ea0e94272def439&g=libreoffice-3-5

fdo#47326 fix RTF import of mixed super/nonsuper text


It will be available in LibreOffice 3.5.3.
Comment 7 Rainer Bielefeld Retired 2012-04-05 08:13:16 UTC
I added Fix submitter as assignee because this will ease queries and bug tracking.
Comment 8 Robinson Tryon (qubit) 2015-12-17 12:04:48 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]